feat: implement RoundController endpoints + Update openapi.yaml
